--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,9 +1,16 @@
 <mat-toolbar class="footer">
   <span>
     Desenvolvido com 
-    <i class="material-icons red v-middle">
+    <i class="material-icons v-middle" appRed>
       favorite
     </i>
     por <strong>Cod<span class="red">3</span>r</strong>
   </span>
+  <!-- <ul>
+    <li *myFor="let n em [1, 2, 3]">{{ n }}</li>
+  </ul> -->
+  <!-- Com dois parametros 
+  <ul>
+    <li *myFor="let n em [1, 2, 3] usando 'texto'"></li>
+  </ul> -->
 </mat-toolbar>
