--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -2,14 +2,14 @@
   <mat-card-title>Novo Produto</mat-card-title>
   <form>
     <mat-form-field>
-      <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name">
+      <input matInput placeholder="Nome" disabled="{{action}}" [(ngModel)]="product.name" name="name">
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Preço (R$)" [(ngModel)]="product.price" name="price">
+      <input matInput placeholder="Preço (R$)" disabled="{{action}}" [(ngModel)]="product.price" name="price">
     </mat-form-field>
   </form>
-  <button mat-raised-button (click)="createProduct()" color="primary">
-    Salvar
+  <button mat-raised-button (click)="funcSubmit()" color="{{buttonColor}}">
+    {{buttonSubmit}}
   </button>
   <button mat-raised-button (click)="cancel()">
     Cancelar
